<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/icon_order"
        android:title="@string/bottom_menu_order"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/heart"
        android:title="@string/bottom_menu_donate"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/icon_go_out"
        android:title="@string/bottom_menu_goOut"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/icon_pro"
        android:title="@string/bottom_menu_pro"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/bottom_menu_account"/>
</menu>